--- a/html/controls.html
+++ b/html/controls.html
@@ -1,80 +1,120 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>5. Gnonogram Mouse/Keyboard Controls</title>
+<title>05. Gnonogram Mouse/Keyboard Controls</title>
 <link rel="stylesheet" type="text/css" href="C.css">
-<script type="text/javascript" language="javascript" src="jquery.js"></script><script type="text/javascript" language="javascript" src="jquery.syntax.js"></script><script type="text/javascript" language="javascript">jQuery(document).ready( function () { jQuery.syntax({root: '', blockLayout: 'plain'}, function (options, html, container) { html.attr('class', container.attr('class')); return html; }); });</script><script type="text/javascript" src="yelp.js"></script>
+<script type="text/javascript" src="jquery.js"></script><script type="text/javascript" src="jquery.syntax.js"></script><script type="text/javascript" src="yelp.js"></script>
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.0 Manual</a> » </div></div></div>
+<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+</a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="strategy.html" title="4. Strategies for solving Gnonograms">Previous</a>  |  <a class="nextlinks-next" href="menus.html" title="6. Gnonograms Menus and Toolbar">Next</a>
+<a class="nextlinks-prev" href="strategy.html" title="04. Strategies for solving Gnonograms">Previous</a>  |  <a class="nextlinks-next" href="menus.html" title="06. Gnonograms Menus and Toolbar">Next</a>
 </div>
-<div class="hgroup"><h1 class="title">5. Gnonogram Mouse/Keyboard Controls</h1></div>
+<div class="hgroup"><h1 class="title"><span class="title">05. Gnonogram Mouse/Keyboard Controls</span></h1></div>
+<div class="region">
 <div class="contents">
 <p class="p">Manipulation of the playing grid is achieved either by using the mouse (or trackpad) or by using the keyboard.</p>
-<div class="list"><ul class="list">
+<div class="list"><div class="inner"><div class="region"><ul class="list">
 <li class="list">
-<p class="p">Move playing grid cursor</p>
-<p class="p"> Use the mouse (trackpad) or the keyboard cursor keys (Arrow keys).</p>
-<p class="p"> The selected cell is marked by a rectangular coloured line and the corresponding row and column clues are highlighted.</p>
+<p class="p">Move playing grid cursor
+		</p>
+<p class="p"> Use the mouse (trackpad) or the keyboard cursor keys (Arrow keys).
+		</p>
+<p class="p"> The selected cell is marked by a rectangular coloured line and the corresponding row and column clues are highlighted.
+		</p>
 </li>
 <li class="list">
-<p class="p">Mark a cell filled</p>
-<p class="p"><span class=" key">Left click</span>  <span class=" em">or</span> <span class=" key">F</span></p>
+<p class="p">Mark a cell filled
+		</p>
+<p class="p"><span class=" key">Left click</span>  <span class=" em">or</span> <span class=" key">F</span>
+		</p>
 </li>
 <li class="list">
-<p class="p">Mark a cell empty</p>
-<p class="p"><span class=" key">Right click</span>  <span class=" em">or</span> <span class=" key">E</span></p>
+<p class="p">Mark a cell empty
+		</p>
+<p class="p"><span class=" key">Right click</span>  <span class=" em">or</span> <span class=" key">E</span>
+		</p>
 </li>
 <li class="list">
-<p class="p">Mark a cell unknown</p>
-<p class="p"><span class=" key">Left double click</span>  <span class=" em">or</span> <span class=" key">X</span></p>
+<p class="p">Mark a cell unknown
+		</p>
+<p class="p"><span class=" key">Left double click</span>  <span class=" em">or</span> <span class=" key">X</span>
+		</p>
 </li>
 <li class="list">
-<p class="p">Mark a block filled/empty/unknown</p>
-<div class="steps"><ol class="steps">
-<li class="steps"><p class="p">Position cursor at one end of block </p></li>
-<li class="steps"><p class="p">Hold down the corresponding button/key</p></li>
-<li class="steps"><p class="p">Move cursor to end of block</p></li>
-<li class="steps"><p class="p">Release button/key.</p></li>
-</ol></div>
+<p class="p">Mark a block filled/empty/unknown
+		</p>
+<div class="steps"><div class="inner"><div class="region"><ol class="steps">
+<li class="steps"><p class="p">Position cursor at one end of block
+			</p></li>
+<li class="steps"><p class="p">Hold down the corresponding button/key
+			</p></li>
+<li class="steps"><p class="p">Move cursor to end of block
+			</p></li>
+<li class="steps"><p class="p">Release button/key.
+			</p></li>
+</ol></div></div></div>
 </li>
 <li class="list">
-<p class="p">Increase/decrease font size (and thereby the size of the whole window)</p>
-<p class="p">Press <span class=" key">Ctrl+</span> to increase font size or <span class=" key">Ctrl-</span> to decrease it.</p>
+<p class="p">Increase/decrease font size (and thereby the size of the whole window)
+		</p>
+<p class="p">Press <span class=" key">Ctrl+</span> to increase font size or <span class=" key">Ctrl-</span> to decrease it. (There are also toolbar icons for this).
+		</p>
 </li>
 <li class="list">
-<p class="p">To determine the freedom of a row or column</p>
-<p class="p">Hover the cursor over the clue.  A tooltip appears giving the required information. This relates to the whole row or column and is not affected by any empty or filled cells.</p>
+<p class="p">To determine the freedom of a row or column
+		</p>
+<p class="p">Hover the cursor over the clue.  A tooltip appears giving the required information. This relates to the whole row or column and is not affected by any empty or filled cells.
+		</p>
 </li>
-</ul></div>
-<p class="p">Many of the menu/toolbar functions have accelerator keys. These are displayed in the menus:</p>
-<div class="list"><ul class="list">
-<li class="list"><p class="p"> Ctrl N - New puzzle</p></li>
-<li class="list"><p class="p"> Ctrl O - Open (load) puzzle</p></li>
-<li class="list"><p class="p"> Ctrl S - Save game</p></li>
-<li class="list"><p class="p"> Ctrl Q - Quit</p></li>
-<li class="list"><p class="p"> Ctrl Z - Undo</p></li>
-<li class="list"><p class="p"> Ctrl Y - Redo</p></li>
-<li class="list"><p class="p"> Ctrl + - Increase font size</p></li>
-<li class="list"><p class="p"> Ctrl - - Decrease font size</p></li>
-<li class="list"><p class="p"> Shift S - Show solution</p></li>
-<li class="list"><p class="p"> Shift W - Show working</p></li>
-<li class="list"><p class="p"> Shift I - Show incorrectly completed cells</p></li>
-<li class="list"><p class="p"> Shift R - Restart</p></li>
-<li class="list"><p class="p"> Shift P - Pause timer (press Close button in dialog to continue)</p></li>
-<li class="list"><p class="p"> Shift C - Use computer solver</p></li>
-<li class="list"><p class="p"> Shift G - Generate random pattern</p></li>
-<li class="list"><p class="p"> Shift E - Edit puzzle information and clues</p></li>
-</ul></div>
+</ul></div></div></div>
+<p class="p">Many of the menu/toolbar functions have accelerator keys. These are displayed in the menus:
+</p>
+<div class="list"><div class="inner"><div class="region"><ul class="list">
+<li class="list"><p class="p"> Ctrl N - New puzzle
+	</p></li>
+<li class="list"><p class="p"> Ctrl O - Open (load) puzzle
+	</p></li>
+<li class="list"><p class="p"> Ctrl S - Save game
+	</p></li>
+<li class="list"><p class="p"> Ctrl Q - Quit
+	</p></li>
+<li class="list"><p class="p"> Ctrl Z - Undo
+	</p></li>
+<li class="list"><p class="p"> Ctrl Y - Redo
+	</p></li>
+<li class="list"><p class="p"> Ctrl + - Increase font size
+	</p></li>
+<li class="list"><p class="p"> Ctrl - - Decrease font size
+	</p></li>
+<li class="list"><p class="p"> Shift S - Show solution
+	</p></li>
+<li class="list"><p class="p"> Shift W - Show working
+	</p></li>
+<li class="list"><p class="p"> Shift I - Show incorrectly completed cells
+	</p></li>
+<li class="list"><p class="p"> Shift R - Restart
+	</p></li>
+<li class="list"><p class="p"> Shift P - Pause timer (press Close button in dialog to continue)
+	</p></li>
+<li class="list"><p class="p"> Shift C - Use computer solver
+	</p></li>
+<li class="list"><p class="p"> Shift G - Generate random pattern
+	</p></li>
+<li class="list"><p class="p"> Shift E - Edit puzzle information and clues
+	</p></li>
+</ul></div></div></div>
 </div>
-<div class="links guidelinks">
+<div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<ul><li class="links"><a href="index.html"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.0 Manual</a></li></ul>
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+</a></li></ul></div>
+</div></div>
 </div>
+<div class="clear"></div>
 </div>
 <div class="footer"><div class="copyrights"></div></div>
 </body>
