--- a/html/config.html
+++ b/html/config.html
@@ -1,29 +1,34 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>7. Configuration and preferences</title>
+<title>07. Configuration and preferences</title>
 <link rel="stylesheet" type="text/css" href="C.css">
-<script type="text/javascript" language="javascript" src="jquery.js"></script><script type="text/javascript" language="javascript" src="jquery.syntax.js"></script><script type="text/javascript" language="javascript">jQuery(document).ready( function () { jQuery.syntax({root: '', blockLayout: 'plain'}, function (options, html, container) { html.attr('class', container.attr('class')); return html; }); });</script><script type="text/javascript" src="yelp.js"></script>
+<script type="text/javascript" src="jquery.js"></script><script type="text/javascript" src="jquery.syntax.js"></script><script type="text/javascript" src="yelp.js"></script>
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.0 Manual</a> » </div></div></div>
+<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+</a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="menus.html" title="6. Gnonograms Menus and Toolbar">Previous</a>  |  <a class="nextlinks-next" href="fileformat.html" title="8. Gnonogram file format">Next</a>
+<a class="nextlinks-prev" href="menus.html" title="06. Gnonograms Menus and Toolbar">Previous</a>  |  <a class="nextlinks-next" href="imageconverter.html" title="08. Import from image">Next</a>
 </div>
-<div class="hgroup"><h1 class="title">7. Configuration and preferences</h1></div>
+<div class="hgroup"><h1 class="title"><span class="title">07. Configuration and preferences</span></h1></div>
+<div class="region">
 <div class="contents">
 <p class="p">The behaviour and appearance of the program can be controlled using</p>
-<div class="list"><ul class="list">
-<li class="list"><p class="p"><span class=" link"><a href="settingsmenu.html" title="">Settings Menu and Toolbar icons</a></span></p></li>
-<li class="list"><p class="p"><span class=" link"><a href="viewmenu.html" title="">View menu </a></span></p></li>
-</ul></div>
+<div class="list"><div class="inner"><div class="region"><ul class="list">
+<li class="list"><p class="p"><span class=" link"><a href="menus.html#settingsmenu" title="Settings Menu and Toolbar icons">Settings Menu and Toolbar icons</a></span></p></li>
+<li class="list"><p class="p"><span class=" link"><a href="menus.html#viewmenu" title="View menu">View menu </a></span></p></li>
+</ul></div></div></div>
 </div>
-<div class="links guidelinks">
+<div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<ul><li class="links"><a href="index.html"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.0 Manual</a></li></ul>
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+</a></li></ul></div>
+</div></div>
 </div>
+<div class="clear"></div>
 </div>
 <div class="footer"><div class="copyrights"></div></div>
 </body>
