--- a/html/fileformat.html
+++ b/html/fileformat.html
@@ -1,54 +1,59 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>8. Gnonogram file format</title>
+<title>A2. Gnonogram file format</title>
 <link rel="stylesheet" type="text/css" href="C.css">
-<script type="text/javascript" language="javascript" src="jquery.js"></script><script type="text/javascript" language="javascript" src="jquery.syntax.js"></script><script type="text/javascript" language="javascript">jQuery(document).ready( function () { jQuery.syntax({root: '', blockLayout: 'plain'}, function (options, html, container) { html.attr('class', container.attr('class')); return html; }); });</script><script type="text/javascript" src="yelp.js"></script>
+<script type="text/javascript" src="jquery.js"></script><script type="text/javascript" src="jquery.syntax.js"></script><script type="text/javascript" src="yelp.js"></script>
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.0 Manual</a> » </div></div></div>
+<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+</a> » </div></div></div>
 <div class="body">
-<div class="links nextlinks">
-<a class="nextlinks-prev" href="config.html" title="7. Configuration and preferences">Previous</a>  |  <a class="nextlinks-next" href="glossary.html" title="9. Word Meanings">Next</a>
-</div>
-<div class="hgroup"><h1 class="title">8. Gnonogram file format</h1></div>
+<div class="links nextlinks"><a class="nextlinks-prev" href="glossary.html" title="A1. Word Meanings">Previous</a></div>
+<div class="hgroup"><h1 class="title"><span class="title">A2. Gnonogram file format</span></h1></div>
+<div class="region">
 <div class="contents">
-<div class="synopsis"><div class="inner"><div class="contents">
+<div class="synopsis"><div class="inner"><div class="region"><div class="contents">
 <p class="p">The Gnonogram puzzle file format is a simple text file with the extension .gno</p>
 <p class="p">It is sufficiently simple to allow manual creation of files using a text editor from published puzzles where only the clues are available. Clues may also be entered by using the program's game editor</p>
 <p class="p">There are up to five sections, each headed by a word or phrase in square brackets.</p>
-<div class="list"><ul class="list">
+<div class="list"><div class="inner"><div class="region"><ul class="list">
 <li class="list"><p class="p">[Description]</p></li>
 <li class="list"><p class="p">[Dimensions]</p></li>
 <li class="list"><p class="p">[Row clues]</p></li>
 <li class="list"><p class="p">[Column clues]</p></li>
 <li class="list"><p class="p">[Solution]</p></li>
-</ul></div>
+</ul></div></div></div>
 <p class="p">If present, the sections must be headed exactly as indicated above.</p>
-</div></div></div>
-<div class="list"><ul class="list">
+</div></div></div></div>
+<div class="list"><div class="inner"><div class="region"><ul class="list">
 <li class="list">
 <div class="title title-item"><h2><span class="title">[Description]</span></h2></div>
 <p class="p">This section is optional</p>
 <p class="p">It may contain up to four non-blank lines which are assigned in the following order:</p>
-<div class="list"><ul class="list">
+<div class="list"><div class="inner"><div class="region"><ul class="list">
 <li class="list"><p class="p">The title of the game</p></li>
 <li class="list"><p class="p">The name of the designer</p></li>
 <li class="list"><p class="p">The date it was designed</p></li>
 <li class="list"><p class="p">A numeric indication of difficulty</p></li>
-</ul></div>
+</ul></div></div></div>
 <p class="p">Any missing lines are displayed as blank.</p>
 <p class="p">If the whole section is missing the filename is displayed as the description and the other information is blank.</p>
+</li>
+<li class="list">
+<div class="title title-item"><h2><span class="title">[License]</span></h2></div>
+<p class="p">This section is not mandatory; if missing, a blank appears in the license field</p>
+<p class="p">This section contains one line which should be as short as possible to avoid making the application window too large.  It will be truncated if it exceeds 50 characters.  Additional lines are ignored.</p>
 </li>
 <li class="list">
 <div class="title title-item"><h2><span class="title">[Dimensions]</span></h2></div>
 <p class="p">This section is mandatory; the file will not load if it is missing</p>
 <p class="p">This section contains two lines which are assigned as follows:</p>
-<div class="list"><ul class="list">
+<div class="list"><div class="inner"><div class="region"><ul class="list">
 <li class="list"><p class="p">The number of rows</p></li>
 <li class="list"><p class="p">The number of columns</p></li>
-</ul></div>
+</ul></div></div></div>
 </li>
 <li class="list">
 <div class="title title-item"><h2><span class="title">[Row clues]</span></h2></div>
@@ -69,12 +74,23 @@
 <p class="p">Each line must contain a series of integers separated by commas representing the solution for the corresponding row.</p>
 <p class="p">Empty cells are represented by the digit "1" and filled cells by the digit "2".</p>
 </li>
-</ul></div>
+<li class="list">
+<div class="title title-item"><h2><span class="title">[Working grid]</span></h2></div>
+<p class="p">This section is created automatically when a game is saved from a later version of gnonograms.  The format is the same as for the [Solution] section. It is not required for the file to load. It allows the user to save a puzzle in the middle of solving it and return to the same position when the puzzle is reloaded.</p>
+</li>
+<li class="list">
+<div class="title title-item"><h2><span class="title">[Status]</span></h2></div>
+<p class="p">This section is created automatically when a game is saved from a later version of gnonograms. It is not required for the file to load. It records whether the puzzle should appear in 'design mode' or 'solving mode' when loaded.  If absent, the puzzle appears in 'solving' mode.</p>
+</li>
+</ul></div></div></div>
 </div>
-<div class="links guidelinks">
+<div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<ul><li class="links"><a href="index.html"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.0 Manual</a></li></ul>
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+</a></li></ul></div>
+</div></div>
 </div>
+<div class="clear"></div>
 </div>
 <div class="footer"><div class="copyrights"></div></div>
 </body>
