updated manual and translations

--- a/html/designmode.html
+++ b/html/designmode.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
@@ -31,7 +31,7 @@
 	</p></li>
 <li class="list"><p class="p"> Load a partially finished puzzle saved earlier
 	</p></li>
-<li class="list"><p class="p"> Start the game editor to enter clues directly or to enter the descriptive information about the puzzle that is displayed at the bottom of the window.
+<li class="list"><p class="p"> Start the puzzle editor to enter clues directly or to enter the descriptive information about the puzzle that is displayed at the bottom of the window.
 	</p></li>
 <li class="list"><p class="p"> Import a suitable image file, converting it into a nonogram puzzle.
 	</p></li>
@@ -43,7 +43,7 @@
 </div>
 <div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div>
 </div>
