--- a/html/fileformat.html
+++ b/html/fileformat.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks"><a class="nextlinks-prev" href="glossary.html" title="A1. Word Meanings">Previous</a></div>
@@ -15,7 +15,7 @@
 <div class="contents">
 <div class="synopsis"><div class="inner"><div class="region"><div class="contents">
 <p class="p">The Gnonogram puzzle file format is a simple text file with the extension .gno</p>
-<p class="p">It is sufficiently simple to allow manual creation of files using a text editor from published puzzles where only the clues are available. Clues may also be entered by using the program's game editor</p>
+<p class="p">It is sufficiently simple to allow manual creation of files using a text editor from published puzzles where only the clues are available. Clues may also be entered by using the program's puzzle editor</p>
 <p class="p">There are up to five sections, each headed by a word or phrase in square brackets.</p>
 <div class="list"><div class="inner"><div class="region"><ul class="list">
 <li class="list"><p class="p">[Description]</p></li>
@@ -32,7 +32,7 @@
 <p class="p">This section is optional</p>
 <p class="p">It may contain up to four non-blank lines which are assigned in the following order:</p>
 <div class="list"><div class="inner"><div class="region"><ul class="list">
-<li class="list"><p class="p">The title of the game</p></li>
+<li class="list"><p class="p">The title of the puzzle</p></li>
 <li class="list"><p class="p">The name of the designer</p></li>
 <li class="list"><p class="p">The date it was designed</p></li>
 <li class="list"><p class="p">A numeric indication of difficulty</p></li>
@@ -75,17 +75,17 @@
 </li>
 <li class="list">
 <div class="title title-item"><h2><span class="title">[Working grid]</span></h2></div>
-<p class="p">This section is created automatically when a game is saved from a later version of gnonograms.  The format is the same as for the [Solution] section. It is not required for the file to load. It allows the user to save a puzzle in the middle of solving it and return to the same position when the puzzle is reloaded.</p>
+<p class="p">This section is created automatically when a puzzle is saved from a later version of gnonograms.  The format is the same as for the [Solution] section. It is not required for the file to load. It allows the user to save a puzzle in the middle of solving it and return to the same position when the puzzle is reloaded.</p>
 </li>
 <li class="list">
 <div class="title title-item"><h2><span class="title">[Status]</span></h2></div>
-<p class="p">This section is created automatically when a game is saved from a later version of gnonograms. It is not required for the file to load. It records whether the puzzle should appear in 'design mode' or 'solving mode' when loaded.  If absent, the puzzle appears in 'solving' mode.</p>
+<p class="p">This section is created automatically when a puzzle is saved from a later version of gnonograms. It is not required for the file to load. It records whether the puzzle should appear in 'design mode' or 'solving mode' when loaded.  If absent, the puzzle appears in 'solving' mode.</p>
 </li>
 </ul></div></div></div>
 </div>
 <div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div>
 </div>
