--- a/html/glossary.html
+++ b/html/glossary.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="gameeditor.html" title="09. Game editor">Previous</a>  |  <a class="nextlinks-next" href="fileformat.html" title="A2. Gnonogram file format">Next</a>
+<a class="nextlinks-prev" href="puzzleeditor.html" title="09. puzzle editor">Previous</a>  |  <a class="nextlinks-next" href="fileformat.html" title="A2. Gnonogram file format">Next</a>
 </div>
 <div class="hgroup"><h1 class="title"><span class="title">A1. Word Meanings</span></h1></div>
 <div class="region">
@@ -46,7 +46,7 @@
 </dl></div></div></div></div>
 <div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div>
 </div>
