--- a/html/strategy.html
+++ b/html/strategy.html
@@ -1,18 +1,18 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>04. Strategies for solving Gnonograms</title>
+<title>04. Strategies for solving 'simple' Gnonograms</title>
 <link rel="stylesheet" type="text/css" href="C.css">
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="solvingmode.html" title="03. Solving mode">Previous</a>  |  <a class="nextlinks-next" href="controls.html" title="05. Gnonogram Mouse/Keyboard Controls">Next</a>
+<a class="nextlinks-prev" href="solvingmode.html" title="03. Solving mode">Previous</a>  |  <a class="nextlinks-next" href="advancedstrategy.html" title="04b. Strategies for solving 'difficult' Gnonograms">Next</a>
 </div>
-<div class="hgroup"><h1 class="title"><span class="title">04. Strategies for solving Gnonograms</span></h1></div>
+<div class="hgroup"><h1 class="title"><span class="title">04. Strategies for solving 'simple' Gnonograms</span></h1></div>
 <div class="region">
 <div class="contents">
 <p class="p">Many puzzles can be solved by considering only one row or column at a time. Certain cells in that row/column can be inferred to be filled or empty. The effect of completing those cells on other rows/columns is then considered.  This is repeated until the puzzle is complete.
@@ -259,7 +259,7 @@
 <div class="hgroup"><h2><span class="title">Further Reading</span></h2></div>
 <div class="contents"><div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div></div>
 </div>
