--- a/html/controls.html
+++ b/html/controls.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="strategy.html" title="04. Strategies for solving Gnonograms">Previous</a>  |  <a class="nextlinks-next" href="menus.html" title="06. Gnonograms Menus and Toolbar">Next</a>
+<a class="nextlinks-prev" href="advancedstrategy.html" title="04b. Strategies for solving 'difficult' Gnonograms">Previous</a>  |  <a class="nextlinks-next" href="menus.html" title="06. Gnonograms Menus and Toolbar">Next</a>
 </div>
 <div class="hgroup"><h1 class="title"><span class="title">05. Gnonogram Mouse/Keyboard Controls</span></h1></div>
 <div class="region">
@@ -41,6 +41,18 @@
 <p class="p">Mark a cell unknown
 		</p>
 <p class="p"><span class=" key">Left double click</span>  <span class=" em">or</span> <span class=" key">X</span>
+		</p>
+</li>
+<li class="list">
+<p class="p">Mark a cell as an undo point (only while solving)
+		</p>
+<p class="p"><span class=" key">M</span>
+		</p>
+</li>
+<li class="list">
+<p class="p">Undo to last marked undo point (only while solving)
+		</p>
+<p class="p"><span class=" key">L</span>
 		</p>
 </li>
 <li class="list">
@@ -77,7 +89,7 @@
 	</p></li>
 <li class="list"><p class="p"> Ctrl O - Open (load) puzzle
 	</p></li>
-<li class="list"><p class="p"> Ctrl S - Save game
+<li class="list"><p class="p"> Ctrl S - Save puzzle
 	</p></li>
 <li class="list"><p class="p"> Ctrl Q - Quit
 	</p></li>
@@ -99,6 +111,8 @@
 	</p></li>
 <li class="list"><p class="p"> Shift P - Pause timer (press Close button in dialog to continue)
 	</p></li>
+<li class="list"><p class="p"> Shift H - Get hint
+	</p></li>
 <li class="list"><p class="p"> Shift C - Use computer solver
 	</p></li>
 <li class="list"><p class="p"> Shift G - Generate random pattern
@@ -109,7 +123,7 @@
 </div>
 <div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div>
 </div>
