--- a/html/howtoplay.html
+++ b/html/howtoplay.html
@@ -6,18 +6,18 @@
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="index.html" title="Gnonogram v 0.9.4 Manual">Previous</a>  |  <a class="nextlinks-next" href="designmode.html" title="02. Design mode">Next</a>
+<a class="nextlinks-prev" href="index.html" title="Gnonogram v 0.9.5 Manual">Previous</a>  |  <a class="nextlinks-next" href="designmode.html" title="02. Design mode">Next</a>
 </div>
 <div class="hgroup"><h1 class="title"><span class="title">01. How to Play Gnonograms</span></h1></div>
 <div class="region">
 <div class="contents">
 <p class="p">Gnonograms is an implementation for the Gnome desktop  of the Japanese logic puzzle "Nonograms", 	also known as "Tsunami", "Griddlers" ......
 </p>
-<p class="p">The object of the game is to discover the pattern in the grid which is encoded by the clues that are given for each row and column.
+<p class="p">The object of the puzzle is to discover the pattern in the grid which is encoded by the clues that are given for each row and column.
 </p>
 <p class="p">Each clue is a series of numbers which represent blocks of filled in cells in the corresponding row or column.  Each number indicates how many cells are in the block it represents.  Each block must be separated by at least one empty cell from neighbouring blocks.  The order of the numbers in the clue shows the order in which the blocks appear in the row or column.
 </p>
@@ -29,14 +29,14 @@
 </div></div>
 <p class="p">In a well-designed puzzle it should be possible to discover, by applying pure logic, the pattern, which is often a picture, that the clues represent.
 </p>
-<p class="p">For some tips on how to solve Gnonogram puzzles see <span class=" link"><a href="strategy.html" title="04. Strategies for solving Gnonograms">04. Strategies for solving Gnonograms</a></span>
+<p class="p">For some tips on how to solve Gnonogram puzzles see <span class=" link"><a href="strategy.html" title="04. Strategies for solving 'simple' Gnonograms">04. Strategies for solving 'simple' Gnonograms</a></span>
 </p>
 <p class="p"> For further information see the <span class=" link"><a href="http://en.wikipedia.org/wiki/Nonogram" title="http://en.wikipedia.org/wiki/Nonogram">Wikipedia page</a></span> on Nonograms
 </p>
 </div>
 <div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div>
 </div>
