--- a/html/imageconverter.html
+++ b/html/imageconverter.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="config.html" title="07. Configuration and preferences">Previous</a>  |  <a class="nextlinks-next" href="gameeditor.html" title="09. Game editor">Next</a>
+<a class="nextlinks-prev" href="config.html" title="07. Configuration and preferences">Previous</a>  |  <a class="nextlinks-next" href="puzzleeditor.html" title="09. puzzle editor">Next</a>
 </div>
 <div class="hgroup"><h1 class="title"><span class="title">08. Import from image</span></h1></div>
 <div class="region">
@@ -59,8 +59,8 @@
 </div></div>
 <p class="p">When satisfied click the "OK" button. The image is converted to a nonogram and imported into the main program.</p>
 <p class="p">If necessary, the puzzle can be adjusted to give a better appearance or to make it more easily soluble using the design functions in the main program.</p>
-<p class="p">Use the game editor (See <span class=" link"><a href="gameeditor.html" title="09. Game editor">09. Game editor</a></span>) to enter the puzzle name, designer name, license and date of creation</p>
-<p class="p">It is recommended to run the computer solver (with or without the 'use advanced solver option') to check whether the game is soluble before saving it.  If you want to have the game load already in solving mode, then make sure it is in this mode when you save it.</p>
+<p class="p">Use the puzzle editor (See <span class=" link"><a href="puzzleeditor.html" title="09. puzzle editor">09. puzzle editor</a></span>) to enter the puzzle name, designer name, license and date of creation</p>
+<p class="p">It is recommended to run the computer solver (with or without the 'use advanced solver option') to check whether the puzzle is soluble before saving it.  If you want to have the puzzle load already in solving mode, then make sure it is in this mode when you save it.</p>
 <div class="figure"><div class="inner">
 <a href="#" class="zoom" data-zoom-in-title="View images at normal size" data-zoom-out-title="Scale images down"></a><div class="region">
 <div class="contents"><div class="media media-image"><div class="inner"><img src="figures/imageconverter-imported.png" height="703" width="612" alt=""></div></div></div>
@@ -70,7 +70,7 @@
 </div>
 <div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div>
 </div>
