--- a/html/solvingmode.html
+++ b/html/solvingmode.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div class="header"><div class="trails"><div class="trail">
-<a class="trail" href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<a class="trail" href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a> » </div></div></div>
 <div class="body">
 <div class="links nextlinks">
-<a class="nextlinks-prev" href="designmode.html" title="02. Design mode">Previous</a>  |  <a class="nextlinks-next" href="strategy.html" title="04. Strategies for solving Gnonograms">Next</a>
+<a class="nextlinks-prev" href="designmode.html" title="02. Design mode">Previous</a>  |  <a class="nextlinks-next" href="strategy.html" title="04. Strategies for solving 'simple' Gnonograms">Next</a>
 </div>
 <div class="hgroup"><h1 class="title"><span class="title">03. Solving mode</span></h1></div>
 <div class="region">
@@ -35,7 +35,7 @@
 </div>
 <div class="links guidelinks"><div class="inner">
 <div class="title"><h3><span class="title">More About</span></h3></div>
-<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.4 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.4 Manual
+<div class="region"><ul><li class="links"><a href="index.html" title="Gnonogram v 0.9.5 Manual"> <span class="media media-image"><img src="figures/gnonograms48.png" alt=""></span> Gnonogram v 0.9.5 Manual
 </a></li></ul></div>
 </div></div>
 </div>
